--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 		
 		<link href="./_app/immutable/assets/0.BtNxVLpI.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CKj3dzzK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DR25jfoq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DcBpUsri.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/0TSCR5EP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BQMf2fAA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DkV5amX8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.oaGxCvXu.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BtOguVqJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DBEOVVzH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BcLDeJm0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CNdMkngW.js">
@@ -28,15 +28,15 @@
 			
 			<script>
 				{
-					__sveltekit_14znkpc = {
+					__sveltekit_1nqmm5u = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CKj3dzzK.js"),
-						import("./_app/immutable/entry/app.oaGxCvXu.js")
+						import("./_app/immutable/entry/start.DcBpUsri.js"),
+						import("./_app/immutable/entry/app.BtOguVqJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
