--- a/brandmuster.html
+++ b/brandmuster.html
@@ -7,11 +7,12 @@
 
 		
 		<link href="./_app/immutable/assets/0.BtNxVLpI.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DcBpUsri.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/0TSCR5EP.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DM1vPXSY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BR2YiJ2g.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BQMf2fAA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DCgjEvnu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DkV5amX8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BtOguVqJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BmkXHfrW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DBEOVVzH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BcLDeJm0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CNdMkngW.js">
@@ -30,15 +31,15 @@
 			
 			<script>
 				{
-					__sveltekit_1nqmm5u = {
+					__sveltekit_xqcqyg = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DcBpUsri.js"),
-						import("./_app/immutable/entry/app.BtOguVqJ.js")
+						import("./_app/immutable/entry/start.DM1vPXSY.js"),
+						import("./_app/immutable/entry/app.BmkXHfrW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
