--- a/index.html
+++ b/index.html
@@ -7,36 +7,37 @@
 
 		
 		<link href="./_app/immutable/assets/0.BtNxVLpI.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DcBpUsri.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/0TSCR5EP.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DM1vPXSY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BR2YiJ2g.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BQMf2fAA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DCgjEvnu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DkV5amX8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BtOguVqJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BmkXHfrW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DBEOVVzH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BcLDeJm0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CNdMkngW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D2z0JNui.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C7q8PjAr.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.CFQZWnkr.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.M3mvx5z6.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.BN2CP_IL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dv3sH-9N.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/b9bg5ewZ.js">
 		<link rel="stylesheet" href="https://use.typekit.net/rsr2dmw.css" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><!----><div id="header"></div> <div class="header-bar"><div class="bar-text"><p class="main-title">Joel Schülin</p> <button class="about">Über mich <!--[!--><!--]--></button> <button class="lang-button"><span class="german-button">DE</span><span class="slash-lang">/</span><span>ENG</span></button></div> <!--[!--><!--]--></div> <div class="masonry-container"><!--[--><div class="masonry-item"><a href="https://brandmuster.info"><img class="blur-[3px]" src="assets/proj1-img-cover.jpg" alt="Brandmuster &lt;span>&amp;#8599&lt;/span>" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="/der-montag"><img class="blur-[3px]" src="assets/proj2-img-cover.jpg" alt="Der Montag" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="/shark-island"><img class="blur-[3px]" src="assets/proj3-img-cover.jpg" alt="Shark Island" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="https://russia-eu-cars.airwars.org/"><img class="blur-[3px]" src="assets/proj5-img-cover.jpg" alt="Sanctions, Scams &amp; Deepfakes &lt;span>&amp;#8599&lt;/span>" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="/mind-the-gap"><img class="blur-[3px]" src="assets/proj4-img-cover.jpg" alt="Mind The Gap" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="/dutch-airstrikes"><img class="blur-[3px]" src="assets/proj6-img-cover.jpg" alt="Dutch Airstrikes" draggable="false"/> <!--[!--><!--]--></a></div><!--]--></div> <div class="footer"><div class="footer-content"><p class="copyright-text">© 2026 Joel Schülin</p> <p class="typeface-credit">Typeface <a href="https://www.collletttivo.it/typefaces/ronzino" class="underline" target="_blank">RONZINO</a> <span class="typeface-foote-media">designed by Luigi Gorlero, Nunzio MazzaferroRONZINO by Colletttivo</span></p> <p class="up-button"><a href="#header">hoch ↑</a></p></div></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><!----><div id="header"></div> <div class="header-bar"><div class="bar-text"><p class="main-title">Joel Schülin</p> <button class="about">Über mich <!--[!--><!--]--></button> <button class="lang-button"><span class="german-button">DE</span><span class="slash-lang">/</span><span>ENG</span></button></div> <!--[!--><!--]--></div> <div class="masonry-container"><!--[--><div class="masonry-item"><a href="https://brandmuster.info"><img class="blur-[3px]" src="assets/proj1-img-cover.jpg" alt="Brandmuster &lt;span>&amp;#8599&lt;/span>" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="./der-montag"><img class="blur-[3px]" src="assets/proj2-img-cover.jpg" alt="Der Montag" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="./shark-island"><img class="blur-[3px]" src="assets/proj3-img-cover.jpg" alt="Shark Island" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="https://russia-eu-cars.airwars.org/"><img class="blur-[3px]" src="assets/proj5-img-cover.jpg" alt="Sanctions, Scams &amp; Deepfakes &lt;span>&amp;#8599&lt;/span>" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="./mind-the-gap"><img class="blur-[3px]" src="assets/proj4-img-cover.jpg" alt="Mind The Gap" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="./dutch-airstrikes"><img class="blur-[3px]" src="assets/proj6-img-cover.jpg" alt="Dutch Airstrikes" draggable="false"/> <!--[!--><!--]--></a></div><!--]--></div> <div class="footer"><div class="footer-content"><p class="copyright-text">© 2026 Joel Schülin</p> <p class="typeface-credit">Typeface <a href="https://www.collletttivo.it/typefaces/ronzino" class="underline" target="_blank">RONZINO</a> <span class="typeface-foote-media">designed by Luigi Gorlero, Nunzio MazzaferroRONZINO by Colletttivo</span></p> <p class="up-button"><a href="#header">hoch ↑</a></p></div></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1nqmm5u = {
+					__sveltekit_xqcqyg = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DcBpUsri.js"),
-						import("./_app/immutable/entry/app.BtOguVqJ.js")
+						import("./_app/immutable/entry/start.DM1vPXSY.js"),
+						import("./_app/immutable/entry/app.BmkXHfrW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
