--- a/unvergessen.html
+++ b/unvergessen.html
@@ -7,39 +7,39 @@
 
 		
 		<link href="./_app/immutable/assets/0.BtNxVLpI.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DM1vPXSY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BR2YiJ2g.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CJGdIy6T.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ByPMdF7q.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BQMf2fAA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DCgjEvnu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/kAp0ySsx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DkV5amX8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BmkXHfrW.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BdVS7rY7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DBEOVVzH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BcLDeJm0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CNdMkngW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D2z0JNui.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C7q8PjAr.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.CFQZWnkr.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/9.sRVc-YhS.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/9.CfpHlTn7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dv3sH-9N.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/dUCvmsph.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BnicqQ25.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/b9bg5ewZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D3r_vH_Q.js">
 		<link rel="stylesheet" href="https://use.typekit.net/rsr2dmw.css" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><!----><div class="header-bar-project"><div class="header-bar-project-content"><p class="title"><!---->Un<br>vergessen<!----></p> <p class="legend-header">Info</p> <p class="description-header">Über das Projekt</p> <p class="back-symbol"><a href="/">Zurück ✕</a></p></div> <div class="legend"><div class="legend-block"><p class="legend-title">von</p> <p class="legend-text">2022</p></div> <div class="legend-block"><p class="legend-title">link</p> <p class="legend-text"><a href="https://www.m-books.eu/store/horizonte-16/" target="_blank">Publiziert in Horizonte 16</a></p></div> <div class="legend-block"><p class="legend-title">mit</p> <p class="legend-text"><!---->Charlotte Flügger<!----></p></div></div> <div class="description-container"><p class="description">Ausgehend von einem Haufen Grabsteinresten im hinteren Bereich eines bekannten Friedhofs in Weimar, Deutschland, untersucht dieses Projekt die Rolle und Politik des Alterns und des Vergessens. Mithilfe der Photogrammetrie wird die Physikalität der Erinnerung in einen digitalen Raum übertragen und hinterfragt nicht nur, wer in Erinnerung bleibt, sondern auch, wie man in einem Zeitalter der digitalen Überwachung und permanenten Aufzeichnungen in Vergessenheit geraten kann. Auf vielen verschiedenen Grabsteinen eingraviert, wird „Unvergessen” weniger zu einer leeren Phrase als vielmehr zu einer Frage.</p></div></div><!----> <div class="horizontal-scroll-container"><!--[--><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj7-vid1.mov" alt="video-grabstein" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj7-vid1.mov" alt="video-grabstein" draggable="false"/> <!--[!--><!--]--></div><!--]--></div><!----><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><!----><div class="header-bar-project"><div class="header-bar-project-content"><p class="title"><!---->Un<br>vergessen<!----></p> <p class="legend-header">Info</p> <p class="description-header">Über das Projekt</p> <p class="back-symbol"><a href="/.">Zurück ✕</a></p></div> <div class="legend"><div class="legend-block"><p class="legend-title">von</p> <p class="legend-text">2022</p></div> <div class="legend-block"><p class="legend-title">link</p> <p class="legend-text"><a href="https://www.m-books.eu/store/horizonte-16/" target="_blank">Publiziert in Horizonte 16</a></p></div> <div class="legend-block"><p class="legend-title">mit</p> <p class="legend-text"><!---->Charlotte Flügger<!----></p></div></div> <div class="description-container"><p class="description">Ausgehend von einem Haufen Grabsteinresten im hinteren Bereich eines bekannten Friedhofs in Weimar, Deutschland, untersucht dieses Projekt die Rolle und Politik des Alterns und des Vergessens. Mithilfe der Photogrammetrie wird die Physikalität der Erinnerung in einen digitalen Raum übertragen und hinterfragt nicht nur, wer in Erinnerung bleibt, sondern auch, wie man in einem Zeitalter der digitalen Überwachung und permanenten Aufzeichnungen in Vergessenheit geraten kann. Auf vielen verschiedenen Grabsteinen eingraviert, wird „Unvergessen” weniger zu einer leeren Phrase als vielmehr zu einer Frage.</p></div></div><!----> <div class="horizontal-scroll-container"><!--[--><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj7-vid1.mov" alt="video-grabstein" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj7-vid1.mov" alt="video-grabstein" draggable="false"/> <!--[!--><!--]--></div><!--]--></div><!----><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_xqcqyg = {
+					__sveltekit_50qta0 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DM1vPXSY.js"),
-						import("./_app/immutable/entry/app.BmkXHfrW.js")
+						import("./_app/immutable/entry/start.CJGdIy6T.js"),
+						import("./_app/immutable/entry/app.BdVS7rY7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 9],
