--- a/dutch-airstrikes.html
+++ b/dutch-airstrikes.html
@@ -6,24 +6,24 @@
 		<link rel="icon" href="./favicon.png" />
 
 		
-		<link href="./_app/immutable/assets/0.BtNxVLpI.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CJGdIy6T.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ByPMdF7q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BQMf2fAA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/kAp0ySsx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DkV5amX8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BdVS7rY7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DBEOVVzH.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BcLDeJm0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CNdMkngW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D2z0JNui.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C7q8PjAr.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CFQZWnkr.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.CcBgIvpl.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dv3sH-9N.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BnicqQ25.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/b9bg5ewZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D3r_vH_Q.js">
+		<link href="./_app/immutable/assets/0.DIrgqM2x.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.0ClbCjVq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/3asPYyz1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D8JHZCSi.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BLT17OA-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BIrGvhn6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C1xWi8tc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C-KRFAI0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B8zictC5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BH0EtjNa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Hvg8IIsD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CV0ZPqmq.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Duh_IVTx.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.DqK33mfc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B2MO0pcQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CbO2QlSN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DiWE8bWm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DM7PL9OJ.js">
 		<link rel="stylesheet" href="https://use.typekit.net/rsr2dmw.css" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -31,15 +31,15 @@
 			
 			<script>
 				{
-					__sveltekit_50qta0 = {
+					__sveltekit_149iegm = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CJGdIy6T.js"),
-						import("./_app/immutable/entry/app.BdVS7rY7.js")
+						import("./_app/immutable/entry/start.0ClbCjVq.js"),
+						import("./_app/immutable/entry/app.C1xWi8tc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
