--- a/dutch-airstrikes.html
+++ b/dutch-airstrikes.html
@@ -7,39 +7,39 @@
 
 		
 		<link href="./_app/immutable/assets/0.DIrgqM2x.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0ClbCjVq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/3asPYyz1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DU7vvK5Q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/gfKtjhqt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D8JHZCSi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BLT17OA-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CUdSDWtw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BIrGvhn6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C1xWi8tc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BNbJLED1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C-KRFAI0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B8zictC5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BH0EtjNa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hvg8IIsD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CV0ZPqmq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Duh_IVTx.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.DqK33mfc.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.DM1daoNu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B2MO0pcQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CbO2QlSN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DtPB32nm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DiWE8bWm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DM7PL9OJ.js">
 		<link rel="stylesheet" href="https://use.typekit.net/rsr2dmw.css" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><!----><div class="header-bar-project"><div class="header-bar-project-content"><p class="title"><!---->Dutch Airstrikes<!----></p> <p class="legend-header">Info</p> <p class="description-header">Über das Projekt</p> <p class="back-symbol"><a href="/.">Zurück ✕</a></p></div> <div class="legend"><div class="legend-block"><p class="legend-title">von</p> <p class="legend-text">2025</p></div> <div class="legend-block"><p class="legend-title">link</p> <p class="legend-text"><a href="https://airwars.org/dutch-mod-releases-results-of-largest-ever-assessment-of-civilian-harm-allegations-from-the-war-against-isis/" target="_blank">Airwars Report</a></p></div> <div class="legend-block"><p class="legend-title">mit</p> <p class="legend-text"><!---->Megan Karlshoej-Pedersen<br>& Clive Vella<!----></p></div></div> <div class="description-container"><p class="description">Im Airwars-Archiv befinden sich 2.978 mutmaßliche Fälle, in denen Zivilisten durch die US-geführte Koalition im Krieg gegen den IS zu Schaden kamen. Die Zahl der Getöteten wird auf mindestens 8.000 geschätzt. Zwar räumte die Koalition über 300 dieser Vorfälle ein, doch bislang erkannten nur vier Mitgliedstaaten – darunter die Niederlande – Schäden durch ihre eigene Beteiligung an. Im Rahmen des Projekts wurden Standorte aus dem Airwars-Archiv mit Daten des niederländischen Verteidigungsministeriums abgeglichen. Nach einjähriger Zusammenarbeit legte das Ministerium dem Parlament detaillierte Ergebnisse zu 61 von Airwars identifizierten Vorwürfen ziviler Schäden im Umfeld niederländischer Luftangriffe im Irak und in Syrien vor.</p></div></div><!----> <div class="horizontal-scroll-container"><!--[--><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj6-img1.jpg" alt="Overview of strikes in Iraq and Syria" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj6-img2.jpg" alt="Analyse von niederländischen Angriffen und Airwars-Archivdaten für Hajin" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj6-img3.jpg" alt="Analyse von niederländischen Angriffen und Airwars-Archivdaten für Aski Mosul" draggable="false"/> <!--[!--><!--]--></div><!--]--></div><!----><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><!----><div class="header-bar-project"><div class="header-bar-project-content"><p class="title"><!---->Dutch Airstrikes<!----></p> <p class="legend-header">Info</p> <p class="description-header">Über das Projekt</p> <p class="back-symbol"><a href=".">Zurück ✕</a></p></div> <div class="legend"><div class="legend-block"><p class="legend-title">von</p> <p class="legend-text">2025</p></div> <div class="legend-block"><p class="legend-title">link</p> <p class="legend-text"><a href="https://airwars.org/dutch-mod-releases-results-of-largest-ever-assessment-of-civilian-harm-allegations-from-the-war-against-isis/" target="_blank">Airwars Report</a></p></div> <div class="legend-block"><p class="legend-title">mit</p> <p class="legend-text"><!---->Megan Karlshoej-Pedersen<br>& Clive Vella<!----></p></div></div> <div class="description-container"><p class="description">Im Airwars-Archiv befinden sich 2.978 mutmaßliche Fälle, in denen Zivilisten durch die US-geführte Koalition im Krieg gegen den IS zu Schaden kamen. Die Zahl der Getöteten wird auf mindestens 8.000 geschätzt. Zwar räumte die Koalition über 300 dieser Vorfälle ein, doch bislang erkannten nur vier Mitgliedstaaten – darunter die Niederlande – Schäden durch ihre eigene Beteiligung an. Im Rahmen des Projekts wurden Standorte aus dem Airwars-Archiv mit Daten des niederländischen Verteidigungsministeriums abgeglichen. Nach einjähriger Zusammenarbeit legte das Ministerium dem Parlament detaillierte Ergebnisse zu 61 von Airwars identifizierten Vorwürfen ziviler Schäden im Umfeld niederländischer Luftangriffe im Irak und in Syrien vor.</p></div></div><!----> <div class="horizontal-scroll-container"><!--[--><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj6-img1.jpg" alt="Overview of strikes in Iraq and Syria" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj6-img2.jpg" alt="Analyse von niederländischen Angriffen und Airwars-Archivdaten für Hajin" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj6-img3.jpg" alt="Analyse von niederländischen Angriffen und Airwars-Archivdaten für Aski Mosul" draggable="false"/> <!--[!--><!--]--></div><!--]--></div><!----><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_149iegm = {
+					__sveltekit_d2gauo = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0ClbCjVq.js"),
-						import("./_app/immutable/entry/app.C1xWi8tc.js")
+						import("./_app/immutable/entry/start.DU7vvK5Q.js"),
+						import("./_app/immutable/entry/app.BNbJLED1.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
