--- a/sanctions-scams-deepfakes.html
+++ b/sanctions-scams-deepfakes.html
@@ -7,39 +7,39 @@
 
 		
 		<link href="./_app/immutable/assets/0.DIrgqM2x.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0ClbCjVq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/3asPYyz1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DU7vvK5Q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/gfKtjhqt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D8JHZCSi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BLT17OA-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CUdSDWtw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BIrGvhn6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C1xWi8tc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BNbJLED1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C-KRFAI0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B8zictC5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BH0EtjNa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hvg8IIsD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CV0ZPqmq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Duh_IVTx.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.i7MKmqak.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.mlpTzvHJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B2MO0pcQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CbO2QlSN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DtPB32nm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DiWE8bWm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DM7PL9OJ.js">
 		<link rel="stylesheet" href="https://use.typekit.net/rsr2dmw.css" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><!----><div class="header-bar-project"><div class="header-bar-project-content"><p class="title"><!---->Mapping Shark Island<!----></p> <p class="legend-header">Info</p> <p class="description-header">Über das Projekt</p> <p class="back-symbol"><a href="/.">Zurück ✕</a></p></div> <div class="legend"><div class="legend-block"><p class="legend-title">von</p> <p class="legend-text">2024</p></div> <div class="legend-block"><p class="legend-title">link</p> <p class="legend-text"><a href="https://forensic-architecture.org/investigation/shark-island" target="_blank">Forensic Architecture</a></p></div> <div class="legend-block"><p class="legend-title">mit</p> <p class="legend-text"><!----><!----></p></div></div> <div class="description-container"><p class="description">lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div></div><!----> <div class="horizontal-scroll-container"><!--[--><!--]--></div><!----><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><!----><div class="header-bar-project"><div class="header-bar-project-content"><p class="title"><!---->Mapping Shark Island<!----></p> <p class="legend-header">Info</p> <p class="description-header">Über das Projekt</p> <p class="back-symbol"><a href=".">Zurück ✕</a></p></div> <div class="legend"><div class="legend-block"><p class="legend-title">von</p> <p class="legend-text">2024</p></div> <div class="legend-block"><p class="legend-title">link</p> <p class="legend-text"><a href="https://forensic-architecture.org/investigation/shark-island" target="_blank">Forensic Architecture</a></p></div> <div class="legend-block"><p class="legend-title">mit</p> <p class="legend-text"><!----><!----></p></div></div> <div class="description-container"><p class="description">lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div></div><!----> <div class="horizontal-scroll-container"><!--[--><!--]--></div><!----><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_149iegm = {
+					__sveltekit_d2gauo = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0ClbCjVq.js"),
-						import("./_app/immutable/entry/app.C1xWi8tc.js")
+						import("./_app/immutable/entry/start.DU7vvK5Q.js"),
+						import("./_app/immutable/entry/app.BNbJLED1.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
