--- a/brandmuster.html
+++ b/brandmuster.html
@@ -7,39 +7,39 @@
 
 		
 		<link href="./_app/immutable/assets/0.DIrgqM2x.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DU7vvK5Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/gfKtjhqt.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B4TMYbfa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DNOCleVv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D8JHZCSi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CUdSDWtw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DyvvdVZ0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BIrGvhn6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BNbJLED1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CSo3zW34.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C-KRFAI0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B8zictC5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BH0EtjNa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hvg8IIsD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CV0ZPqmq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Duh_IVTx.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.dbeONbvz.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.DORKKWn0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B2MO0pcQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DtPB32nm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/TM-J1JJR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DiWE8bWm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DM7PL9OJ.js">
 		<link rel="stylesheet" href="https://use.typekit.net/rsr2dmw.css" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><!----><div class="header-bar-project"><div class="header-bar-project-content"><p class="title"><!---->Brandmuster<!----></p> <p class="legend-header">Info</p> <p class="description-header">Über das Projekt</p> <p class="back-symbol"><a href=".">Zurück ✕</a></p></div> <div class="legend"><div class="legend-block"><p class="legend-title">von</p> <p class="legend-text">2024</p></div> <div class="legend-block"><p class="legend-title">link</p> <p class="legend-text"><a href="https://brandmuster.info" target="_blank">brandmuster.info</a></p></div> <div class="legend-block"><p class="legend-title">mit</p> <p class="legend-text"><!----><!----></p></div></div> <div class="description-container"><p class="description">‚Brandmuster‘ untersucht das wiederkehrende Phänomen von Bränden in Geflüchtetenunterkünften und Wohnräumen von Migranten. Die Untersuchung von Brandereignissen – sei es durch Brandstiftung durch rechtsextreme Täter*innen, durch Bewohner*innen oder durch technische Defekte – ermöglicht es, die komplexen Zusammenhänge der deutschen Migrationspolitik und der damit verbundenen Praktiken zu beleuchten, die Asylsuchende immobilisieren und sie gleichzeitig dem Risiko von vorsätzlichen und unbeabsichtigten Bränden aussetzen. Die Daten wurden auf einer Archiv-Website zusammengestellt, die eine scrollbare Zeitleiste mit Brandereignissen enthält.</p></div></div><!----> <div class="horizontal-scroll-container"><!--[--><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj1-img1.jpg" alt="Image 1" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj1-img2.jpg" alt="Image 2" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj1-img-cover.jpg" alt="Image 3" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj1-img-cover.jpg" alt="Image 4" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj1-img-cover.jpg" alt="Image 5" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj1-img-cover.jpg" alt="Image 6" draggable="false"/> <!--[!--><!--]--></div><!--]--></div><!----><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><!----><div class="header-bar-project"><div class="header-bar-project-content"><p class="title"><!---->Brandmuster<!----></p> <p class="legend-header">Info</p> <p class="description-header">Über das Projekt</p> <p class="back-symbol"><a href="./">Zurück ✕</a></p></div> <div class="legend"><div class="legend-block"><p class="legend-title">von</p> <p class="legend-text">2024</p></div> <div class="legend-block"><p class="legend-title">link</p> <p class="legend-text"><a href="https://brandmuster.info" target="_blank">brandmuster.info</a></p></div> <div class="legend-block"><p class="legend-title">mit</p> <p class="legend-text"><!----><!----></p></div></div> <div class="description-container"><p class="description">‚Brandmuster‘ untersucht das wiederkehrende Phänomen von Bränden in Geflüchtetenunterkünften und Wohnräumen von Migranten. Die Untersuchung von Brandereignissen – sei es durch Brandstiftung durch rechtsextreme Täter*innen, durch Bewohner*innen oder durch technische Defekte – ermöglicht es, die komplexen Zusammenhänge der deutschen Migrationspolitik und der damit verbundenen Praktiken zu beleuchten, die Asylsuchende immobilisieren und sie gleichzeitig dem Risiko von vorsätzlichen und unbeabsichtigten Bränden aussetzen. Die Daten wurden auf einer Archiv-Website zusammengestellt, die eine scrollbare Zeitleiste mit Brandereignissen enthält.</p></div></div><!----> <div class="horizontal-scroll-container"><!--[--><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj1-img1.jpg" alt="Image 1" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj1-img2.jpg" alt="Image 2" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj1-img-cover.jpg" alt="Image 3" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj1-img-cover.jpg" alt="Image 4" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj1-img-cover.jpg" alt="Image 5" draggable="false"/> <!--[!--><!--]--></div><div class="img-horizontal-scroll"><img class="blur-[3px]" src="assets/proj1-img-cover.jpg" alt="Image 6" draggable="false"/> <!--[!--><!--]--></div><!--]--></div><!----><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_d2gauo = {
+					__sveltekit_1o1xja5 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DU7vvK5Q.js"),
-						import("./_app/immutable/entry/app.BNbJLED1.js")
+						import("./_app/immutable/entry/start.B4TMYbfa.js"),
+						import("./_app/immutable/entry/app.CSo3zW34.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
